GNOME Bugzilla – Bug 661887
auto-resize of ClutterCairoTexture does not work correctly
Last modified: 2011-10-31 11:07:15 UTC
auto-resize of ClutterCairoTexture does not work correctly. I assign actor's size to 400x400, but cairo surface size will be resized to 401x401. I think it should be 400x400 too.
the surface size is rounded up to the nearest pixel, as Clutter uses floating point values for its dimensional and positional attributes. we don't use the C conversion rules, as they might lead to smaller surfaces - so we use ceilf() instead. I'm going to attach a patch that drops an half-pixel rounding which should be enough to fix this.
Created attachment 199809 [details] [review] cairo-texture: Drop the half pixel rounding Calling ceilf() should be enough.
Attachment 199809 [details] pushed to master.