cairo-texture: Drop the half pixel rounding

Calling ceilf() should be enough.

https://bugzilla.gnome.org/show_bug.cgi?id=661887